<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentStart="true"/>
        <Button
            android:layout_width="74dp"
            android:layout_height="37dp"
            android:text="@string/pop_edit"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_date_entered"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_neck_circumference"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popNeck"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_bust_circumference"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popBust"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_chest_circumference"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popChest"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_waist_circumference"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popWaist"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_hip_circumference"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popHip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_inseam_length"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popInseam"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_comments"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="1dp"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_empty"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:id="@+id/popComments"/>

</LinearLayout>